# test

./: .gitignore  CMakeLists.txt  Dockerfile
test_static_shared/: CMakeLists.txt  main.cpp
test_static_shared/includes/: log_group.h
test_static_shared/log_facade/: CMakeLists.txt  log_facade.cpp  log_facade.h
test_static_shared/shrd_lib/: CMakeLists.txt  shrd_lib.cpp  shrd_lib.h
